Fixes (#195)
* Fixed issue with the landing page footer.

* Fixed issue with stands scroll.

* Removed scrollbar from main page.

* Removed scrollbar from sidebar on chrome.

* Removed scrollbar from main page on chrome.

--- a/src/styles.css
+++ b/src/styles.css
@@ -8118,4 +8118,9 @@ body {
 
   overflow-x: hidden;
   overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  width: 0px;
 }
